<resources>
    <string name="app_name">Gamebar</string>

    <string name="user">User Name </string>
    <string name="pass">Password </string>
    <string name="confirmPass">Confirm Password</string>

    <string name="gamebar">GameBar</string>

    <string name="loginButton">Login</string>
    <string name="signupText">Sign Up</string>
    <string name="register">Register</string>
    <string name="title_activity_signup">Sign in</string>
    <string name="name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be > 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="goToSignup">Don\'t have an account? Sign up here.</string>
    <string name="goToLogin">Already have an account? Login here.</string>
    <string name="logout">Logout</string>
    <string name="sampleEmail">me@test.com</string>
    <string name="sampleName">Don Joe</string>
    <string name="profile">Profile</string>
    <string name="qrScan">Scan a table</string>
    <string name="playTrivia">Play Trivia</string>
    <string name="score">Score</string>
    <string name="topic">Topic</string>
    <string name="question">Questions</string>
    <string name="correct">Correct</string>
    <string name="mythology">Mythology</string>
    <string name="geography">Geography</string>
    <string name="generalKnowledge">General Knowledge</string>
    <string name="computerScience">Computer Science</string>
    <string name="sports">Sports</string>
    <string name="art">Art</string>
    <string name="history">History</string>
    <string name="music">Music</string>
    <string name="videoGames">Video Games</string>
    <string name="politics">Politics</string>
    <string name="chooseTopic">Choose a Topic</string>
    <string name="cont">Continue</string>
    <string name="newTopic">New Topic</string>

    <string name="scanBar">Scan Table Barcode</string>
    <string name="nextPlayer">Next Player</string>

</resources>
