<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <TextView
        android:id="@+id/gamebarTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="212dp"
        android:text="@string/gamebar"
        android:textColor="@color/darkGray"
        android:textSize="42dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signinButton"
        android:layout_width="162dp"
        android:layout_height="57dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="124dp"
        android:background="@drawable/buttonstyle"
        android:text="@string/loginButton"
        android:textColor="#ffffff"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamebarTextView" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="162dp"
        android:layout_height="57dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="124dp"
        android:background="@drawable/buttonstyle"
        android:text="@string/register"
        android:textColor="#ffffff"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signinButton" />
</androidx.constraintlayout.widget.ConstraintLayout>