<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Userid"
        android:layout_width="93dp"
        android:layout_height="57dp"
        android:gravity="center"
        android:text="@string/user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.191"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.108" />

    <TextView
        android:id="@+id/passwordid"
        android:layout_width="92dp"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/pass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Userid"
        app:layout_constraintStart_toStartOf="@+id/Userid"
        app:layout_constraintTop_toBottomOf="@+id/Userid"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/userLoginText"
        android:layout_width="177dp"
        android:layout_height="57dp"
        android:layout_marginStart="93dp"
        android:layout_marginLeft="93dp"
        app:layout_constraintBottom_toBottomOf="@+id/Userid"
        app:layout_constraintStart_toStartOf="@+id/Userid"
        app:layout_constraintTop_toTopOf="@+id/Userid" />

    <EditText
        android:id="@+id/passwordLoginText"
        android:layout_width="178dp"
        android:layout_height="45dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/passwordid"
        app:layout_constraintEnd_toEndOf="@+id/userLoginText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/passwordid"
        app:layout_constraintTop_toTopOf="@+id/passwordid"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/passwordLoginText"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="@+id/passwordid"
        app:layout_constraintTop_toBottomOf="@+id/passwordLoginText"
        app:layout_constraintVertical_bias="0.068" />

</androidx.constraintlayout.widget.ConstraintLayout>